erDiagram
    users ||--o{ user_courses : "1:N"
    courses ||--o{ user_courses : "1:N"
    courses ||--o{ schedules : "1:N"

    users {
        INTEGER id PK
        TEXT username UK
        TEXT password
        TEXT role
    }

    courses {
        INTEGER id PK
        TEXT name UK
        TEXT description
    }

    user_courses {
        INTEGER user_id FK
        INTEGER course_id FK
    }

    schedules {
        INTEGER id PK
        INTEGER course_id FK
        TEXT teacher
        TEXT room
        TEXT subject
        TEXT start_time
        TEXT end_time
        TEXT day
        TEXT date
    }